// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components/file_preview_modal/file_preview_modal_header/FilePreviewModalHeader should match snapshot the desktop view 1`] = `
<div
  className="file-preview-modal-header"
>
  <Memo(FilePreviewModalInfo)
    filename="img.png"
    post={Object {}}
    showFileName={true}
  />
  <Memo(FilePreviewModalMainNav)
    fileIndex={1}
    handleNext={[MockFunction]}
    handlePrev={[MockFunction]}
    totalFiles={3}
  />
  <Memo(FilePreviewModalMainActions)
    canDownloadFiles={true}
    enablePublicLink={false}
    fileURL="http://example.com/img.png"
    filename="img.png"
    handleModalClose={[MockFunction]}
    handleNext={[MockFunction]}
    handlePrev={[MockFunction]}
    isExternalFile={false}
    isMobile={false}
    onGetPublicLink={[MockFunction]}
    showOnlyClose={false}
    showPublicLink={false}
    usedInside="Header"
  />
</div>
`;

exports[`components/file_preview_modal/file_preview_modal_header/FilePreviewModalHeader should match snapshot the mobile view 1`] = `
<div
  className="file-preview-modal-header"
>
  <Memo(FilePreviewModalMainActions)
    canDownloadFiles={true}
    enablePublicLink={false}
    fileURL="http://example.com/img.png"
    filename="img.png"
    handleModalClose={[MockFunction]}
    handleNext={[MockFunction]}
    handlePrev={[MockFunction]}
    isExternalFile={false}
    isMobile={true}
    onGetPublicLink={[MockFunction]}
    showOnlyClose={true}
    showPublicLink={false}
    usedInside="Header"
  />
  <Memo(FilePreviewModalMainNav)
    fileIndex={1}
    handleNext={[MockFunction]}
    handlePrev={[MockFunction]}
    totalFiles={3}
  />
</div>
`;
